HW1 algebra quaternion group simplified

--- a/Classes - Year 1/Algebra/HW1-DB.tex
+++ b/Classes - Year 1/Algebra/HW1-DB.tex
@@ -256,7 +256,9 @@
   \]
   have finite orders but $AB$ has infinite order.
 \end{prob}
-
+\begin{proof}
+s
+\end{proof}
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Problem 10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \setcounter{thm}{9}   % next prob is 10
