--- a/Classes - Year 1/Algebra/HW3/Homework_3.tex
+++ b/Classes - Year 1/Algebra/HW3/Homework_3.tex
@@ -90,7 +90,7 @@
 \newcommand{\ceil}[1]{\left\lceil #1 \right\rceil}
 \newcommand{\mbf}[1]{\ensuremath{\mathbf{#1}}}
 \newcommand{\tbf}[1]{\textbf{ #1 }}
-
+\newcommand{\Span}{\ensuremath{\mathrm{Span}}}
 
 \makeatletter
 \renewcommand*\env@matrix[1][*\c@MaxMatrixCols c]{%
@@ -108,7 +108,7 @@
 
 %%% Formatting: Page Header
 \newcommand{\StudentName}{Danny Banegas}
-\newcommand{\AssignmentName}{Homework 2}
+\newcommand{\AssignmentName}{Homework 3}
 \newcommand{\CourseName}{MATH 721 - Algebra II}
 
 
@@ -129,12 +129,15 @@
 \doublespacing
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 \begin{document}
-Submit the following from the problem list: 40, 41, 42, 45, 46, 47, 48, 49, 50, 51, 52.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 40 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \setcounter{thm}{39}   % next prob is 40
 \begin{prob}
 Prove that an abelian group has a composition series if and only if it is finite.
 \end{prob}
+
+\begin{proof}
+hey
+\end{proof}
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 41 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{prob}
@@ -183,16 +186,55 @@ u^4,\quad u^5,\quad 3u^5 - u^4 + 2,\quad (u+1)^{-1},\quad (u^2 - 6u + 8)^{-1}.
 \begin{prob}
 Let $F = \mathbb{Q}(\sqrt{2}, \sqrt{3})$. Find $[F:\mathbb{Q}]$ and a basis of $\FF$ over $\mathbb{Q}$.
 \end{prob}
+
+\begin{proof}
+To begin, $\sqrt{2}$ and $\sqrt{3}$ are zeros of monic irreducible polynomials $x^{2}-2$ and $x^{2}-3$, respectively, over $\QQ$. So $\QQ(\sqrt{2})\cong \QQ[x]/\langle x^{2}-2\rangle\cong (\mathrm{Span}_{\QQ}\{1,x\}\subseteq \QQ[x]) \cong \QQ[x]/\langle x^{2}-3\rangle \cong \QQ(\sqrt{3})$. So then $\QQ(\sqrt{2})=\mathrm{Span}\{1,\sqrt{2}\}$ and $\QQ(\sqrt{3})=\mathrm{Span}\{1,\sqrt{3}\}$. Observe. 
+\begin{align*}
+  &\sqrt{3}=a+b\sqrt{2}\text{ for some }a,b\in \QQ \implies 3=(a+b\sqrt{2})^{2}=(a^{2}+(2ab)\sqrt{2}+2b^{2})\not\in \QQ,\\
+  &\sqrt{2}=a+b\sqrt{3}\text{ for some }a,b\in \QQ\implies 2=(a+b\sqrt{3})^{2}=(a^{2}+(2ab)\sqrt{3}+3b^{2})\not\in \QQ,\\
+  &\sqrt{6}=a+b\sqrt{2}\text{ for some }a,b\in \QQ\implies 6=(a+b\sqrt{2})^{2}=(a^{2}+(2ab)\sqrt{2}+2b^{2})\not\in \QQ,\\
+  &\sqrt{6}=a+b\sqrt{3}\text{ for some }a,b\in \QQ\implies 6=(a+b\sqrt{3})^{2}=(a^{2}+(2ab)\sqrt{3}+3b^{2})\not\in \QQ.
+\end{align*}
+  All of the above are contradictions. So $1,\sqrt{2},\sqrt{3},\sqrt{6}$ must be linearly independent over $\QQ$. Next, $\QQ(\sqrt{2},\sqrt{3})=\mathrm{Span}_{\QQ(\sqrt{2})}\{1,\sqrt{3}\}=\{\alpha+\beta\sqrt{3}\mid \alpha,\beta\in \QQ(\sqrt{2})\}=\{(a+b\sqrt{2})+(c+d\sqrt{2})\sqrt{3}\mid a,b,c,d\in \QQ\}=\{a+b\sqrt{2}+c\sqrt{3}+d\sqrt{6}\mid a,b,c,d\in \QQ\}$. So $\{1,\sqrt{2},\sqrt{3},\sqrt{6}\}$ spans $\QQ(\sqrt{2},\sqrt{3})$ and since it's elements are linearly independent over $\QQ$, it must be a basis for $\QQ(\sqrt{2},\sqrt{3})$ over $\QQ$.
+
+  Thus,
+  \begin{center}
+    $\{1,\sqrt{2},\sqrt{3},\sqrt{6}\}$ is a basis for $\QQ(\sqrt{2},\sqrt{3})$ over $\QQ$ and $[\QQ(\sqrt{2},\sqrt{3}):\QQ]=4.$
+  \end{center}
+\end{proof}
+
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 51 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{prob}
 Let $\KK$ be a field. In the field $\KK(X)$, let $u=X^{3}/(X+1)$. What is $[\KK(X):\KK(u)]?$
 \end{prob}
+
+\begin{proof}
+$(\KK(u))(x)=\left\{\frac{f(x)}{g(x)}\mid f,g\in \KK(u)[t]\right\}$ and then $u=\frac{x^{3}}{x+1}\implies u(x+1)-x^{3}=ux+u-x^{3}=0\implies x^{3}-ux-u=0$. So $x$ is a zero of the polynomial $t^{3}-ut-u$ over $\KK(u)$. This means that the degree of $x$ over $K(u)$, or equivalently, $[\KK(x):\KK(u)]$ must divide $3$. Therefore, $[\KK(x):\KK(u)]\in \{1,3\}$. Suppose $[\KK(x):\KK(u)]=1$, then $\KK(x)=\KK(u)$ and $x=\frac{f(u)}{g(u)}$ for some $f(u),g(u)\neq 0$ coprime over $\KK(u)$. Observe. 
+\begin{center}
+  $x^{3}-ux-u=(\frac{f(u)}{g(u)})^{3}-u(\frac{f(u)}{g(u)})-u=0$ and $f(u)^{3}-uf(u)g(u)^{2}-ug(u)^{3}=0$. So then $f(u)^{3}=uf(u)g(u)^{2}+ug(u)^{3}=ug(u)^{2}(f(u)+g(u))\newline\implies 3\mathrm{deg}(f(u))=1+2\mathrm{deg}(g(u))+\mathrm{max}\{\mathrm{deg}(f(u)),\mathrm{deg}(f(u))\}.$
+\end{center}
+Let $a=\mathrm{deg}(f(u)),b=\mathrm{deg}(g(u))$ and note that both belong to $\ZZ^{+}$. We get the following cases:
+\begin{center}
+  $\begin{cases} 3a=1+2b+a\\ \text{or} \\ 3a=1+2b+b\end{cases}\implies \begin{cases} 2a=1+2b\\ \text{or} \\ 3a=1+3b\end{cases}\implies \begin{cases} 2(a+b)=1\\ \text{or} \\ 3(a+b)=1\end{cases}\implies \begin{cases} (a+b)=\frac{1}{2}\\ \text{or} \\ (a+b)=\frac{1}{3}\end{cases}.$
+\end{center}
+Both of the above are contradictions. So $[\KK(x):\KK(u)]=3$.
+
+\end{proof}
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 52 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{prob}
 Let $\KK\subseteq \FF$ be a field extension. If $u,v\in \FF$ are algebraic over $\KK$ of degrees $m$ and $n$, respectively, then $[\KK(u,v): \KK]\leq mn.$ If $m$ and $n$ are relatively prime, then $[\KK(u,v):\KK]=mn.$
 \end{prob}
+
+\begin{proof}
+$\KK(u)$ and $\KK(v)$ have bases $\BB_{u}=\{1,\hdots,u^{m-1}\}$ and $\BB_{v}=\{1,\hdots, v^{n-1}\}$, respectively, over $\KK$. Also, $\KK(u,v)=\Span_{\KK_{u}}\BB_{v}=\{\sum_{i=0}^{n-1}a_{i}u^{i}\mid a_{0},\hdots,a_{n-1}\in \KK(u)\}=\Span_{\KK}\,\BB_{u}\BB_{v}$. So $\BB_{u}\BB_{v}$ span $\KK(u,v)$ over $\KK$. Therefore, $[\KK(u,v):\KK]=|\BB_{m}\BB_{n}|\leq |\BB_{u}||\BB_{v}|=mn.$
+
+Suppose $\mathrm{gcd}(m,n)=1$. Since $\KK(u,v)\supseteq \KK(u)\supseteq \KK$, by the Tower Law we have:
+  $$[\KK(u,v):\KK]=[\KK(u,v):\KK(u)][\KK(u):\KK]=[\KK(u,v):\KK(v)][\KK(v):\KK].$$
+Therefore, $[\KK(u):\KK]=m$ and $[\KK(v):\KK]=n$ both divide $[\KK(u,v):\KK]$, which means it is a multiple of both $m$ and $n$. Well, since $\mathrm{lcm}(m,n)=\frac{mn}{gcd(m,n)}=mn$ and $[\KK(u,v):\KK]\leq mn$, it must be the case that in fact $[\KK(u,v):\KK]=mn$.
+
+\end{proof}
 \newpage
 
 
